--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ioredis": "4.16.0" 
   },
   "devDependencies": {
     "eslint": "^6.6.0",
