--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Karma",
+  "name": "KARA",
   "version": "1.0.0",
   "main": "app.js",
-  "repository": "git@github.com:vs4vijay/Karma.git",
+  "repository": "git@github.com:vs4vijay/KARA.git",
   "author": "Vijay Soni <vs4vijay@gmail.com>",
   "license": "MIT",
   "scripts": {
